k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: labas-smk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: jaybrain/labas-backend:50e9cc0526d6fc7201e8109bacff0d9c4b7a424a
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: labas-smk
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
