k8s/fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service
  namespace: labas-smk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-service
  template:
    metadata:
      labels:
        app: ai-service
    spec:
      containers:
        - name: ai-service
          image: jaybrain/labas-fastapi:a47b9e62c157d5ac33470571480be4b2b33d4a08
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  namespace: labas-smk
spec:
  selector:
    app: ai-service
  ports:
    - port: 8001
      targetPort: 8001
