k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: labas-smk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: jaybrain/labas-frontend:a47b9e62c157d5ac33470571480be4b2b33d4a08
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: labas-smk
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
